--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="storeapp/index.html" target="_self">
+                                    <img class="img-portfolio img-responsive" src="storeapp/img/hyrule-field.jpg">
                                 </a>
                             </div>
                         </div>
@@ -236,10 +236,10 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Start Bootstrap</strong>
                     </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <p>4212 Raintree Blvd.
+                        <br>Greenwood, Indiana 46143</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
+                        <li><i class="fa fa-phone fa-fw"></i> (502) 310-1386</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:gavinwilson63.gw@gmail.com">gavinwilson63.gw@gmail.com</a>
                         </li>
                     </ul>
