modifications to storeapp

--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                            <h3>CSS Smiley Face</h3>
+                                <a href="http://codepen.io/G_Wade22/pen/vgLZwK" target="_self">
+                                    <img class="img-portfolio img-responsive" src="img/smiley-face.png">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <!-- /.row (nested) -->
                     <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
