--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="#top" onclick=$("#menu-close").click();>My Portfolio</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
@@ -145,7 +145,7 @@
                                 <i class="fa fa-gear fa-stack-2x"></i>
                             </span>
                                 <h4>
-                                    <strong>Javascript</strong>
+                                    <strong>JavaScript</strong>
                                 </h4>
                                 <p>Experience creating functions, loops, and creating objects using multiple methods in javascript.</p>
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
